# memos_mobile

./: .env.android.debug  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: android.yml
docs/: plan.md  progess.md  scope.md
scripts/: build-android.sh  doctor.sh  sign-android.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/android-overrides/app/src/main/: AndroidManifest.xml
src-tauri/android-overrides/app/src/main/java/com/memos/mobile/: MainActivity.kt
src-tauri/android-overrides/app/src/main/res/drawable/: ic_brand_mark.xml  ic_launcher_round.xml  launch_background.xml
src-tauri/android-overrides/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: config.rs  lib.rs  main.rs
