[package]
name = "memos-mobile"
version = "0.1.0"
description = "Android Tauri shell for a self-hosted Memos instance"
authors = ["Codex"]
edition = "2021"

[lib]
name = "memos_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.4.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.8.2", features = [] }
url = "2.5"
